--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,14 @@
     font-style: normal;
     font-size: 14px;
   }
+
+  .type-nav-small {
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12px;
+  }
 }
 
 @layer base {
