--- a/src/index.css
+++ b/src/index.css
@@ -49,4 +49,18 @@
   .brand-button {
     @apply text-neutral-50 rounded-2xl bg-linear-to-t from-brand-dark to-brand hover:drop-shadow-xl/25 drop-shadow-brand-dark;
   }
+
+  .link-hover::before {
+      content: "";
+    @apply w-full h-full scale-100 absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 rounded-2xl bg-neutral-200 -z-10 opacity-0 transition-all duration-150 ease-in-out;
+  }
+
+  .link-hover {
+    @apply relative;
+  }
+
+  .link-hover:hover::before {
+    @apply opacity-100 scale-125;
+  }
+
 }
