--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,11 @@
 
 @layer components {
   .brand-button {
-    @apply text-neutral-50 rounded-2xl bg-linear-to-t from-brand-dark to-brand hover:drop-shadow-xl/25 drop-shadow-brand-dark;
+    @apply text-neutral-50 rounded-2xl bg-linear-to-t from-brand-dark to-brand hover:drop-shadow-xl/25 drop-shadow-brand-dark scale-100 transition-all duration-150 ease-in-out;
+  }
+
+  .brand-button:hover {
+    @apply scale-105;
   }
 
   .link-hover::before {
@@ -56,11 +60,11 @@
   }
 
   .link-hover {
-    @apply relative;
+    @apply relative; 
   }
 
   .link-hover:hover::before {
-    @apply opacity-100 scale-125;
+    @apply opacity-100 scale-130;
   }
 
 }
