--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,18 @@
     @apply scale-100 inset-shadow-sm inset-shadow-brand-dark;
   }
 
+  .link-inset {
+    @apply scale-100 transition-all duration-150 ease-in-out;
+  }
+
+  .link-inset:hover {
+    @apply scale-105;
+  }
+
+  .link-inset:active {
+    @apply scale-100 inset-shadow-sm inset-shadow-neutral-300;
+  }
+
   .link-hover::before {
     content: "";
     @apply w-full h-full scale-100 absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 rounded-2xl bg-neutral-200 -z-10 opacity-0 transition-all duration-150 ease-in-out;
