--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,14 @@
 }
 
 @layer components {
+  .bg-standard {
+    @apply bg-neutral-50 dark:bg-neutral-900;
+  }
+
+  .text-standard {
+    @apply text-neutral-700 dark:text-neutral-200;
+  }
+
   .brand-button {
     @apply text-neutral-50 rounded-2xl bg-linear-to-t from-brand-dark to-brand hover:drop-shadow-xl/25 drop-shadow-brand-dark scale-100 transition-all duration-150 ease-in-out;
   }
@@ -60,7 +68,7 @@
 
   .link-hover::before {
     content: "";
-    @apply w-full h-full scale-100 absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 rounded-2xl bg-neutral-200 -z-10 opacity-0 transition-all duration-150 ease-in-out;
+    @apply w-full h-full scale-100 absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 rounded-2xl bg-neutral-200 dark:bg-neutral-700 -z-10 opacity-0 transition-all duration-150 ease-in-out;
   }
 
   .link-hover {
@@ -72,19 +80,11 @@
   }
 
   .link-hover:active::before {
-    @apply scale-125 inset-shadow-sm inset-shadow-neutral-300;
-  }
-
-  .link-fade {
-    @apply text-neutral-700;
-  }
-
-  .link-fade:hover {
-    @apply text-neutral-500;
+    @apply scale-125 inset-shadow-sm inset-shadow-neutral-300 dark:inset-shadow-neutral-800;
   }
 
   .link-dotted {
-    @apply underline underline-offset-[1.5px] decoration-dotted decoration-1 decoration-neutral-700 cursor-pointer;
+    @apply underline underline-offset-[1.5px] decoration-dotted decoration-1 decoration-neutral-700 dark:decoration-neutral-200 cursor-pointer;
   }
 
   .link-dotted:hover {
