Remove carousel scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,15 @@
     font-style: normal;
     font-size: 16px;
   }
+
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @layer base {
